--- a/StarCharts/src/app/app.component.html
+++ b/StarCharts/src/app/app.component.html
@@ -1,24 +1,23 @@
-﻿<h1 id="tableLabel">Weather forecast</h1>
+﻿<h1 id="tableLabel">Celestial bodies</h1>
 
-<p>This component demonstrates fetching data from the server.</p>
+<p>Здесь будут карты небесные</p>
 
-<p *ngIf="!forecasts"><em>Loading... Please refresh once the ASP.NET backend has started. See <a href="https://aka.ms/jspsintegrationangular">https://aka.ms/jspsintegrationangular</a> for more details.</em></p>
+<p *ngIf="!planets"><em>Where are my planets? Where are they?</em></p>
 
-<table *ngIf="forecasts">
+<table *ngIf="planets">
     <thead>
-        <tr>
-            <th>Date</th>
-            <th>Temp. (C)</th>
-            <th>Temp. (F)</th>
-            <th>Summary</th>
+        <tr *ngFor="let charName of characteristics">
+            <th>{{ charName }}</th>
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let forecast of forecasts">
-            <td>{{ forecast.date }}</td>
-            <td>{{ forecast.temperatureC }}</td>
-            <td>{{ forecast.temperatureF }}</td>
-            <td>{{ forecast.summary }}</td>
+        <tr *ngFor="let planet of planets">
+          <td>{{ planet.name }}</td>
+          <td>{{ planet.age }}</td>
+          <td>{{ planet.diameter }}</td>
+          <td>{{ planet.mass }}</td>
+          <td>{{ planet.type }}</td>
+          <td>{{ planet.system }}</td>
         </tr>
     </tbody>
 </table>
